--- a/examples/orchestration_run/orchestrate_basic.yaml
+++ b/examples/orchestration_run/orchestrate_basic.yaml
@@ -2,35 +2,53 @@ $schema: https://azuremlschemas.azureedge.net/promptflow/latest/OrchestrationRun
 
 data: data.jsonl
 
-flows:
+jobs:
+# flows
   main:
-    flow: flow_directory
+    type: flow
+    flow: .
     column_mapping:
       question: ${data.question}
-  eval_flow1:
+  eval1:
+    type: flow
     flow: ../evaluation/similarity.yaml
     column_mapping:
       temperature: 0.5
       ground_truth: ${data.ground_truth}
       prediction: ${main.outputs.chat_output}
-  eval_flow2:
+  eval2:
+    type: flow
     flow: ../evaluation/asserts.yaml
     column_mapping: # inputs
       asserts: ${data.asserts}
       answer: ${main.outputs.chat_output}
     connections:
       node1.connection: open_ai_connection  # Override flow node connection
-
-aggregations:
-  avg_similarity:
-    op: AVG
-    input: ${eval_flow1.outputs.score}
-  p95_similarity:
-    op: p95
-    input: ${eval_flow1.outputs.score}
+# aggregations
   pass_rate_asserts:
+    type: aggregation
     source:
       type: code
       path: pass_rate.py
     inputs:
+      results: ${eval_flow1.outputs}  # Aggregated list of flow output lines
+    runtime: ci-runtime               # Use precreated runtime
+  pass_rate_asserts1:
+    type: aggregation
+    source:
+      type: package
+      tool: my_tool_package.tools.my_aggregation_tool
+    inputs:
       results: ${eval_flow2.outputs}  # Aggregated list of flow output lines
+    environment:                      # Use automatic runtime created from this environment
+      python_requirements_txt: requirements.txt
+  avg_similarity:
+    type: aggregation 
+    op: AVG                           # predefined aggregation
+    input: ${eval1.outputs.score}
+    # Use automatic runtime default to promptlow runtime base image
+  p95_similarity:
+    type: aggregation
+    op: p95                           # predefined aggregation
+    input: ${eval1.outputs.score}
+    # Use automatic runtime default to promptlow runtime base image
