--- a/examples/orchestration_run/orchestrate_gen_data.yaml
+++ b/examples/orchestration_run/orchestrate_gen_data.yaml
@@ -1,38 +1,60 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/OrchestrationRun.schema.json
 
-flows:
+jobs:
+# data prepare
   data_gen:
+    type: flow                         # we might introduce a new type: data_gen 
     flow: ../data/generate_data.yaml
     column_mapping:
       seed: xxx.pdf
+
+# flows
   main:
-    flow: flow_directory
+    type: flow
+    flow: .
     column_mapping:
-      question: ${data_gen.outputs.question}
-  eval_flow1:
+      question: ${data.question}
+  eval1:
+    type: flow
     flow: ../evaluation/similarity.yaml
     column_mapping:
       temperature: 0.5
-      ground_truth: ${data_gen.outputs.ground_truth}
+      ground_truth: ${data.ground_truth}
       prediction: ${main.outputs.chat_output}
-  eval_flow2:
+  eval2:
+    type: flow
     flow: ../evaluation/asserts.yaml
     column_mapping: # inputs
-      asserts: ${data_gen.outputs.asserts}
+      asserts: ${data.asserts}
       answer: ${main.outputs.chat_output}
     connections:
       node1.connection: open_ai_connection  # Override flow node connection
 
-aggregations:
-  avg_similarity:
-    op: AVG
-    input: ${eval_flow1.outputs.score}
-  p95_similarity:
-    op: p95
-    input: ${eval_flow1.outputs.score}
-  avg_asserts:
+# aggregations
+  pass_rate_asserts:
+    type: aggregation
     source:
       type: code
       path: pass_rate.py
     inputs:
+      results: ${eval_flow1.outputs}  # Aggregated list of flow output lines
+    runtime: ci-runtime               # Use precreated runtime
+  pass_rate_asserts1:
+    type: aggregation
+    source:
+      type: package
+      tool: my_tool_package.tools.my_aggregation_tool
+    inputs:
       results: ${eval_flow2.outputs}  # Aggregated list of flow output lines
+    environment:                      # Use automatic runtime created from this environment
+      python_requirements_txt: requirements.txt
+  avg_similarity:
+    type: aggregation 
+    op: AVG                           # predefined aggregation
+    input: ${eval1.outputs.score}
+    # Use automatic runtime default to promptlow runtime base image
+  p95_similarity:
+    type: aggregation
+    op: p95                           # predefined aggregation
+    input: ${eval1.outputs.score}
+    # Use automatic runtime default to promptlow runtime base image
