--- a/src/promptflow-tools/promptflow/tools/yamls/llm_vision.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/llm_vision.yaml
@@ -35,6 +35,7 @@ promptflow.tools.llm_vision.llm_vision:
         chat_completion: true
         include:
           model_version:
+          - turbo-2024-04-09
           - vision-preview
       allow_manual_entry: true
       is_multi_select: false
