--- a/src/promptflow-parallel/pyproject.toml
+++ b/src/promptflow-parallel/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["poetry-core>=1.5.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
 name = "promptflow-parallel"
 version = "1.10.0.dev0"
