--- a/src/promptflow-recording/recordings/azure/test_azure_cli_perf_TestAzureCliPerf_test_pfazure_run_create.yaml
+++ b/src/promptflow-recording/recordings/azure/test_azure_cli_perf_TestAzureCliPerf_test_pfazure_run_create.yaml
@@ -395,6 +395,90 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
+      - azsdk-python-storage-blob/12.13.0 Python/3.9.17 (Windows-10-10.0.22621-SP0)
+      x-ms-date:
+      - Mon, 15 Jan 2024 06:06:51 GMT
+      x-ms-version:
+      - '2021-08-06'
+    method: HEAD
+    uri: https://fake_account_name.blob.core.windows.net/fake-container-name/LocalUpload/000000000000000000000000000000000000/print_input_flow.jsonl
+  response:
+    body:
+      string: ''
+    headers:
+      accept-ranges:
+      - bytes
+      content-length:
+      - '56'
+      content-md5:
+      - I/k2vLbQ+WkABQncQUd5Rg==
+      content-type:
+      - application/octet-stream
+      last-modified:
+      - Tue, 26 Dec 2023 03:34:26 GMT
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      vary:
+      - Origin
+      x-ms-blob-type:
+      - BlockBlob
+      x-ms-creation-time:
+      - Tue, 26 Dec 2023 03:34:26 GMT
+      x-ms-meta-name:
+      - 489008dc-84bd-4bee-82db-0bb80f7ad272
+      x-ms-meta-upload_status:
+      - completed
+      x-ms-meta-version:
+      - b7185e71-1e33-43b7-b8be-43bdd40e6731
+      x-ms-version:
+      - '2021-08-06'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/xml
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      User-Agent:
+      - azsdk-python-storage-blob/12.13.0 Python/3.9.17 (Windows-10-10.0.22621-SP0)
+      x-ms-date:
+      - Mon, 15 Jan 2024 06:06:52 GMT
+      x-ms-version:
+      - '2021-08-06'
+    method: HEAD
+    uri: https://fake_account_name.blob.core.windows.net/fake-container-name/az-ml-artifacts/000000000000000000000000000000000000/print_input_flow.jsonl
+  response:
+    body:
+      string: ''
+    headers:
+      server:
+      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+      transfer-encoding:
+      - chunked
+      vary:
+      - Origin
+      x-ms-error-code:
+      - BlobNotFound
+      x-ms-version:
+      - '2021-08-06'
+    status:
+      code: 404
+      message: The specified blob does not exist.
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/xml
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      User-Agent:
       - azsdk-python-storage-blob/12.19.1 Python/3.11.9 (Linux-5.15.146.1-microsoft-standard-WSL2-x86_64-with-glibc2.39)
       x-ms-date:
       - Mon, 13 May 2024 09:07:17 GMT
