--- a/.github/workflows/promptflow-evals-unit-test.yml
+++ b/.github/workflows/promptflow-evals-unit-test.yml
@@ -66,7 +66,7 @@ jobs:
           export install_time=$(((`date +%s` - ${start_tm})/60))
           echo "The installation took ${install_time} minutes."
           echo "The time limit for installation is ${TIME_LIMIT}"
-          python ../../scripts/code_qa/report_to_app_insights.py --activity install_time_s --value $((`date +%s` - ${start_tm})) --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
+          poetry run python ../../scripts/code_qa/report_to_app_insights.py --activity install_time_s --value $((`date +%s` - ${start_tm})) --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
           test ${install_time} -le $TIME_LIMIT || echo "::warning file=pyproject.toml,line=40,col=0::The installation took ${install_time} minutes, the limit is ${TIME_LIMIT}."
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: install recording
@@ -76,7 +76,7 @@ jobs:
         run: |
             poetry run pytest -m unittest --cov=promptflow --cov-config=pyproject.toml --cov-report=term --cov-report=html --cov-report=xml --cov-fail-under=63
             export cov_pct=grep "data-ratio" htmlcov/index.html | tail -n1 | sed -r 's/.*>([0-9]+%)<.*/\1/g'
-            python ../../scripts/code_qa/report_to_app_insights.py --activity test_coverage --value $cov_pct --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
+            poetry run python ../../scripts/code_qa/report_to_app_insights.py --activity test_coverage --value $cov_pct --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: upload coverage report
         uses: actions/upload-artifact@v4
